<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ChangePasswordActivity">

    <com.qor7.mpo.custom.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/customHeader">

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/EditTextParentStyle"
        android:hint="@string/old_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/EditTextParentStyle"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/EditTextParentStyle"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSubmit"
            style="@style/ButtonParentStyle"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_30sdp"/>

    </LinearLayout>

</RelativeLayout>