<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".EnterDetailsActivity">

    <com.qor7.mpo.custom.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text18BoldBlackStyle"
                android:text="@string/enter_your_details" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextParentStyle"
                android:layout_marginTop="@dimen/_25sdp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/EditTextParentStyle"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <RelativeLayout
                android:id="@+id/rlSelectCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/dr_rounded_border_gray_line"
                android:paddingTop="@dimen/_3sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spLocation"
                    style="@style/SpinnerBGStyle"
                    android:layout_width="match_parent"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"/>

            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bntSubmit"
                style="@style/ButtonParentStyle"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>