<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEnterLocation"
            style="@style/Text16BoldBlackStyle"
            android:text="@string/enter_your_location"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toStartOf="@+id/imgClose"
            android:layout_centerVertical="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCityAdd"
            style="@style/Text12RegularBlackStyle"
            android:text="@string/give_us_your_city_details_we_will_reach_there_soon"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_toStartOf="@+id/imgClose"
            android:singleLine="false"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_close"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSelectCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/dr_rounded_border_gray_line"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spLocation"
                style="@style/SpinnerBGStyle"
                android:layout_width="match_parent"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtCity"
            style="@style/EditTextParentStyle"
            android:hint="@string/select_city"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:inputType="text"
            android:visibility="gone"/>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtAskQue"
            style="@style/EditTextParentStyle"
            android:hint="@string/enter_pincode"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:inputType="number"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCityNotList"
            style="@style/Text12RegularBlueStyle"
            android:text="@string/your_city_is_not_in_list_click_here"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="@dimen/_10sdp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSubmit"
                style="@style/ButtonParentStyle"
                android:text="@string/submit"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>