<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".AlertActivity">

    <com.qor7.mpo.custom.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customHeader"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnWhatsApp"
                style="@style/ButtonParentStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/dr_large_rounded_button_green"
                android:text="@string/whatsapp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSMS"
                style="@style/ButtonParentStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/dr_large_rounded_button_black"
                android:text="@string/sms" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnEmail"
                style="@style/ButtonParentStyle"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/dr_large_rounded_button_red"
                android:text="@string/email" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>